--- a/css/add-act.css
+++ b/css/add-act.css
@@ -1,23 +1,56 @@
 .add_act {
-    display: flex;
+  /*  display: flex;*/
     flex-flow: column;
     justify-content: center;
     align-items: center;
+
 }
 
+.act-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+
+}
 .acts {
     display: flex;
     flex-flow: row;
     justify-content: right;
     align-items: center;
     text-align: right;
-    padding-right: 15%;
+  /*  padding-right: 15%; */
 
 }
 
+.act {
+    display: flex;
+justify-content: center;
+    color: #2A85D4;
+    font-size: 20px;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
+}
+
+
 .icon {
-    width: 2.9em;
-    height: 2.5em;
+    margin-left: 1em;
+    width: 25px;
+    height: 25px;
+}
+.icon_det {
+    background-image: url("img/details.png");
+    background-repeat: no-repeat;
+}
+
+.icon_paym {
+    background-image: url("img/payment.png");
+    background-repeat: no-repeat;
+}
+
+.icon_masl {
+    background-image: url("img/locus.png");
+    background-repeat: no-repeat;
 }
 
 
