--- a/css/usage.css
+++ b/css/usage.css
@@ -1,6 +1,10 @@
 .usage {
-    background-color: #DFF0FF;
     align-self: stretch;
+  /*   display: block; */
+    /* flex-flow: column ;
+     align-items: center;
+     justify-content: center;
+    /* width: 100%;*/
 }
 
 .hdr-c {
@@ -13,7 +17,6 @@
     font-size: 30px;
     font-weight: bold;
     color: #153958;
-
 }
 
 .usage_btns {
@@ -21,7 +24,6 @@
     justify-content: center;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-
 }
 
 .use-btn {
@@ -63,16 +65,16 @@
     flex-flow: row;
     justify-content: center;
     width: 95%;
-
-
 }
 .usage_data {
     width: 30%;
     padding-top: 10px;
+    float: right;
+    text-align: right;
+    padding-right: 0.5em;
 }
 .lineChart {
     width: 60%;
-
     align-content: center;
 }
 .usage_data_val {
@@ -115,22 +117,26 @@
 }
 
 .chart-ttl {
-    font-size: 30px;
+    font-size: 19px;
+    font-weight: bold;
     color: rgb(21, 57, 88);
-    text-align: center;
-    padding-top: 3%;
-    -moz-transform: matrix( 0.64819885440779,0,0,0.64819885440778,0,0);
-    -webkit-transform: matrix( 0.64819885440779,0,0,0.64819885440778,0,0);
-    -ms-transform: matrix( 0.64819885440779,0,0,0.64819885440778,0,0);
+    padding-right: 0.4em;
 }
-
+.usage_row_ttl {
+    display: flex;
+    justify-content: right;
+    width: 95%;
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
+}
 .fld-usage {
-    overflow-y: scroll;
-    max-height: 500px;
+    overflow-y: auto;
+    max-height: 485px;
     width: 100%;
-    float: left;
-
+    direction: ltr;
 }
+
+
 .fld-usage::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -138,17 +144,21 @@
     background-color: #F5F5F5;
 }
 
-.fld-usage::-webkit-scrollbar
-{
+.fld-usage::-webkit-scrollbar{
     width: 12px;
     background-color: #F5F5F5;
 }
 
-.fld-usage::-webkit-scrollbar-thumb
-{
+.fld-usage::-webkit-scrollbar-thumb{
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #006DB8;
+}
+
+.usg-data{
+    direction: rtl;
+    width: 100%;
+    padding-top: 0.3px;
 }
 
 
