--- a/css/bill-header.css
+++ b/css/bill-header.css
@@ -73,7 +73,7 @@ bill-data-row {
 
 .bll-prd-cell {
     display: table-cell;
-    font-size: 18px;
+    font-size: 20px;
     flex-grow: 2;
     line-height: 1.25;
     text-align: left;
@@ -85,11 +85,11 @@ bill-data-row {
 
 .bll-prd-select {
     color: rgb(76, 76, 76);
-    font-size: 20px;
+    font-size: 28px;
     margin-top: 0.5em;
-    line-height: 1.3;
-    padding: .3em ;
-    width: 100%;
+    line-height: 0.75;
+    padding: .2em ;
+    width: 7em;
     max-width: 100%; /* useful when width is set to anything other than 100% */
     box-sizing: border-box;
   /*  margin: 0;*/
