--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@
     display: block;
     background-color: #153958;
     top: 0;
-    padding: 12px;
+    padding: 12px 0 12px 0;
     margin: 0;
     position: relative;
     z-index: 5;
@@ -20,10 +20,12 @@
     width: 100%;
 }
 .cust-det-data{
-    width: 85%;
+
     position: relative;
     z-index: 10;
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .wrap-cust-det {
@@ -85,9 +87,6 @@
     font-weight: bold;
 }
 
-.col-sml {
-    width: 47%;
-}
 
 .cust-det-col {
    /* width: 33%;*/
