--- a/css/payment.css
+++ b/css/payment.css
@@ -119,9 +119,8 @@
 
 .plus:after {
     content: '+';
-    font-size: 5em;
+    font-size: 4.5em;
     color: #E43B99;
-
     -moz-transform: matrix( 4.07868678423729,0,0,4.07868678423732,0,0);
     -webkit-transform: matrix( 4.07868678423729,0,0,4.07868678423732,0,0);
     -ms-transform: matrix( 4.07868678423729,0,0,4.07868678423732,0,0);
@@ -129,7 +128,7 @@
 
 .minus:after {
     content: '-';
-    font-size: 5em;
+    font-size: 4.5em;
     color: #E43B99;
     -moz-transform: matrix( 4.07868678423729,0,0,4.07868678423732,0,0);
     -webkit-transform: matrix( 4.07868678423729,0,0,4.07868678423732,0,0);
@@ -150,7 +149,6 @@
 }
 
 .title {
-    font-size: 25px;
     color: #2A85D4;
     margin-bottom: 0.25em;
     font-weight: bold;
@@ -563,7 +561,8 @@ vertical-align: center;
 */
 .msgbox-popup {
     position: absolute;
-    top: 25%;
+    top: 20%;
+    left: 25%;
   /*  position: relative;*/
  /*   width: min-content;*/
    /* z-index: 99;*/
@@ -572,7 +571,7 @@ vertical-align: center;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    left: 30%;
+
     /*calc(-250px - 10%);*/
 /*    top: 70%;*/
     animation: fadeIn 1s;
@@ -651,4 +650,5 @@ vertical-align: center;
     font-size: 20px;
     color: rgb(47, 76, 102);
     line-height: 1.25;
+    padding-right: 5%;
 }
