--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,7 @@
 
     position: relative;
     z-index: 10;
-    display: flex;
+  /*  display: flex;*/
     justify-content: center;
     align-items: center;
 }
